# lstc_website

./: .gitignore  Makefile  README.md  docker-compose.yml  lstc_website.code-workspace  utils.mk
api/lstc/: lstc_api.mk  swagger.yaml
api/lstc/event-get/: Cargo.toml  make.mk
api/lstc/event-get/src/: main.rs
api/lstc/event-list/: Cargo.toml  make.mk
api/lstc/event-list/src/: main.rs
docs/images/: C4.drawio
infrastructure/: README.md
infrastructure/0_developer/: pre-requistes.sh
infrastructure/1_bootstrap/: bootstrap.sh
infrastructure/2_per_account/: ecr.tf  locals.tf  main.tf  per_account.mk  route53.tf  vars.tf
infrastructure/3_per_environment/: api._tf  api.tf  api__lstc.tf  api__lstc__event-get.lambda.tf  api__lstc__event-list.lambda.tf  data_table.tf  dns.tf  ecs.tf  lambdas.tf  load-balancer.tf  locals.tf  main.tf  network.tf  per_environment.mk  vars.tf  website.tf
infrastructure/3_per_environment/vars/: dev.tfvars  test.tfvars  www.tfvars
lstc-api/: Cargo.toml  Dockerfile  lstc_api.mk
lstc-api/src/: main.rs
lstc-apigw/: Cargo.toml
lstc-apigw/src/: cors.rs  lib.rs  repository.rs
lstc-domain/: Cargo.toml
lstc-domain/src/: lib.rs
lstc-web/: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html  index.scss  lstc_web.mk  nginx.conf
lstc-web/css/: _responsive.scss  index.scss
lstc-web/src/: app.rs  config.rs  main.rs  state.rs
lstc-web/src/components/: mod.rs
lstc-web/src/components/atoms/: call_to_action.rs  call_to_action.scss  console.rs  mod.rs
lstc-web/src/components/pages/: event_list.rs  event_view.rs  home.rs  mod.rs  not_found.rs
lstc-web/src/components/templates/: mod.rs  template.rs
lstc_api/: Cargo.toml  Dockerfile  lstc_api.mk
lstc_api/src/: main.rs
