[package]
name = "trunk-template"
version = "0.1.6"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.5.0"
yew = { version = "0.21", features = ["csr", "hydration", "ssr"] }
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.42"
chrono = { version = "0.4.38", features = ["serde"] }
lstc_domain = { path = "../lstc-domain" }
