[package]
name = "event_get"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lstc_apigw = { path = "../../../lstc-apigw" }
lstc_domain = { path = "../../../lstc-domain" }
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
aws-sdk-dynamodb = "1.36.0"
aws-config = "1.5.3"
